--- a/Resume.html
+++ b/Resume.html
@@ -23,10 +23,10 @@
 <div class='content'>
 <img
      
-src='https://pic4.zhimg.com/80/v2-c5c3cb6609e8831b09ff80e577f890cf_720w.jpg' class='"writer-img'width="150" height="150"style="border-radius:70%">
+src='logo.png' class='"writer-img'width="150" height="150"style="border-radius:70%">
 <img
      
-src='https://pic1.zhimg.com/80/v2-39dd445e286faa81e1929922d3832524_720w.jpg' class='"writer-img'width="150" height="150">
+src='Gerry.jpg' class='"writer-img'width="150" height="150">
   
 <h3 class='byline'> </h3>
 <h1>Gerry(Shen Binjie) Resume</h1>
