--- a/IT Project.html
+++ b/IT Project.html
@@ -32,10 +32,10 @@
 <body>
 <img
      
-src='https://pic1.zhimg.com/80/v2-0340b8c9cbb3e5d0697bfa728464c620_720w.jpg' class='"writer-img'width="600" height="600">
+src='2.png' class='"writer-img'width="600" height="600">
 <img
      
- src='https://pic4.zhimg.com/80/v2-63ee9cfb56bf974adc906e324fd95b9b_720w.jpg' class='"writer-img'width="600" height="600"  >
+ src='1.png' class='"writer-img'width="600" height="600"  >
   <hr>
   
   </hr>
