--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="introduce">
             <div class="introduce_item">
-                <img class="introduce_item_img" src="https://wx3.sinaimg.cn/mw2000/008cRnKzgy1h0xntwz9llj30u016076v.jpg" class='"writer-img'width="100" height="150"alt="">
+                <img class="introduce_item_img" src="Getty.jpg" class='"writer-img'width="100" height="150"alt="">
                 <span class="introduce_item_title">My name is Shen Binjie and my English name is Gerry. I got Advanced Diploma in IT Ningbo city college of vocational technology. I love to collect things, especially stamps, I am optimistic, cheerful, sincere and passionate about others. Serious and responsible, good at communication and coordination. Solid professional knowledge and positive work attitude. Strong analytical and problem-solving skills, good organizational and communication skills, and teamwork spirit.</span>
 
             </div>
