--- a/IT Project.html
+++ b/IT Project.html
@@ -55,6 +55,58 @@ src='2.png' class='"writer-img'width="600" height="600">
   
     </tr>
 </table>
+  <table>
+<caption>Answer the following questions in the context of the system diagram provided by Gerry(Shen Binjie)</caption>
+<thead>
+<tr>
+<th><!-- Intentionally Blank --></th>
+        <th>Tom(Jiang Yuyi)</th>
+        <th>Knight(Chen Jiahao)</th>
+<tr>
+</thead>
+<tbody>
+<tr>
+<th>Name this system? </th>
+        <td>1</td>
+        <td>2</td>
+</tr>
+<tr>
+<th>What are the system objectives?</th>
+        <td>1</td>
+        <td>2</td>
+</tr>
+<tr>
+ <th>List 3 essential system features and components?</th>
+        <td>1</td>
+        <td>2</td>
+</tr>
+  <tr>
+        <th>List 3 essential hardware from this system.</th>
+        <td>1</td>
+        <td>2</td>
+    </tr>
+  <tr>
+        <th>List 3 essential software from this system.</th>
+        <td>1</td>
+        <td>2</td>
+    </tr>
+         <tr>
+        <th>List 2 external system components.</th>
+        <td>1</td>
+        <td>2</td>
+    </tr>
+              <tr>
+        <th>List 2 system benefits</th>
+        <td>1</td>
+        <td>2</td>
+    </tr>
+              <tr>
+        <th>List 2 project difficulties:</th>
+        <td>1</td>
+        <td>2</td>
+    </tr>
+</tbody>
+</table>
 </body>
 
 </html>
