--- a/IT Project.html
+++ b/IT Project.html
@@ -30,9 +30,14 @@
   </ul>
   
 <body>
-<img
+  <h2>System diagram</h2>
+<p>The system transmits the data transmitted by the user to the PC to the network server, detects and distinguishes safe and dangerous data through the firewall, then excludes the dangerous data and transmits the safe data to the cloud. </p>
+  <img
      
 src='2.png' class='"writer-img'width="600" height="600">
+  
+<h4>Vital</h4>
+<p>With the accelerated development of social digitization and intelligence, the wide application of new technologies such as AI, 5G, and IoT, as well as a large number of new hardware and applications have brought about rapid growth in data volume, and at the same time, data types have become more and more diverse. Produce, capture and store as much data as possible for full analysis to gain insights. Therefore, the storage and classification of data is very important. The IT project I study is about database storage and data classification, storing safe data and excluding dangerous information.</p>
 <img
      
  src='1.png' class='"writer-img'width="600" height="600"  >
@@ -55,8 +60,10 @@ src='2.png' class='"writer-img'width="600" height="600">
   
     </tr>
 </table>
-  <table>
+
+<table>
 <caption>Answer the following questions in the context of the system diagram provided by Gerry(Shen Binjie)</caption>
+
 <thead>
 <tr>
 <th><!-- Intentionally Blank --></th>
@@ -67,43 +74,43 @@ src='2.png' class='"writer-img'width="600" height="600">
 <tbody>
 <tr>
 <th>Name this system? </th>
-        <td>1</td>
-        <td>2</td>
+        <td>database management system</td>
+        <td>database management system</td>
 </tr>
 <tr>
 <th>What are the system objectives?</th>
-        <td>1</td>
-        <td>2</td>
+        <td>Build a database management system to identify the security of information and store secure data</td>
+        <td>Build a database management system to screen and store secure data</td>
 </tr>
 <tr>
  <th>List 3 essential system features and components?</th>
-        <td>1</td>
-        <td>2</td>
+        <td>Data classification, data storage, filtering data</td>
+        <td>Data classification, data storage, filtering data</td>
 </tr>
   <tr>
         <th>List 3 essential hardware from this system.</th>
-        <td>1</td>
-        <td>2</td>
+        <td>CPU, Hard Disk, Network Card</td>
+        <td>CPU, Hard Disk, Network Card</td>
     </tr>
   <tr>
         <th>List 3 essential software from this system.</th>
-        <td>1</td>
-        <td>2</td>
+        <td>Microsoft SQL server，HPE ProLiant DL360 Gen10 Plus server，IIS server</td>
+        <td>Microsoft SQL server，HPE ProLiant DL360 Gen10 Plus server，Apache server</td>
     </tr>
          <tr>
         <th>List 2 external system components.</th>
-        <td>1</td>
-        <td>2</td>
+        <td>smartphone, computer</td>
+        <td>pad，laptop</td>
     </tr>
               <tr>
         <th>List 2 system benefits</th>
-        <td>1</td>
-        <td>2</td>
+        <td>Ability to automatically filter secure information</td>
+        <td>Has a large amount of storage</td>
     </tr>
               <tr>
         <th>List 2 project difficulties:</th>
-        <td>1</td>
-        <td>2</td>
+        <td>Need to build a large database</td>
+        <td>Not possessing a higher technical level</td>
     </tr>
 </tbody>
 </table>
