--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="home">
         <div class="content">
             <div class="stars"></div>
-            <img class="bgc" src="https://img0.baidu.com/it/u=974052753,3840877296&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=281" width="100%" alt="">
+            <img class="bgc" src="0132be638ae386110faa57cf13062d22.jpeg" width="100%" alt="">
             <h3 class="title">Welcome to my website</h3>
             <img class="icon" src="https://img0.baidu.com/it/u=2970623884,3069127894&fm=253&fmt=auto&app=138&f=JPEG?w=499&h=276" alt="">
             <div class='ribbon'>
