--- a/IT Project.html
+++ b/IT Project.html
@@ -1,127 +1,156 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>CV by Gerry</title>
-  <link rel="stylesheet" href="./style3.css">
-  <link rel="icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <title>CV by Gerry</title>
+    <link rel="stylesheet" href="./style3.css">
+    <link rel="icon" href="favicon.ico">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Resume</title>
-  <link rel="stylesheet" href="./style2.css">
+    <!-- partial:index.partial.html -->
+    <!DOCTYPE html>
+    <html lang="en">
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
-<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>CodePen - Resume</title>
+        <link rel="stylesheet" href="./style2.css">
 
-  
-  <ul>
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="Resume.html">Resume</a></li>
-    <li><a href="IT Project.html">IT Project</a></li>
-  </ul>
-  
-<body>
-  <h2>System diagram</h2>
-<p>The system transmits the data transmitted by the user to the PC to the network server, detects and distinguishes safe and dangerous data through the firewall, then excludes the dangerous data and transmits the safe data to the cloud. </p>
-  <img
-     
-src='2.png' class='"writer-img'width="600" height="600">
-  
-<h4>Vital</h4>
-<p>With the accelerated development of social digitization and intelligence, the wide application of new technologies such as AI, 5G, and IoT, as well as a large number of new hardware and applications have brought about rapid growth in data volume, and at the same time, data types have become more and more diverse. Produce, capture and store as much data as possible for full analysis to gain insights. Therefore, the storage and classification of data is very important. The IT project I study is about database storage and data classification, storing safe data and excluding dangerous information.</p>
-<img
-     
- src='1.png' class='"writer-img'width="600" height="600"  >
-  <hr>
-  
-  </hr>
-  <table border="1">
-    <tr>
-        <th>Name</th>
-        <th>Details</th>
-    </tr>
-    <tr>
-        <td>Microsoft SQL server</td>
-        <td>MySQL is one of the most popular relational database management systems. In terms of WEB applications, MySQL is one of the best RDBMS (Relational Database Management System) application software.</td>
- 
-    </tr>
-    <tr>
-        <td>HPE ProLiant DL360 Gen10 Plus server</td>
-        <td>HPE ProLiant DL360 Gen10 Plus Server with one Intel® Xeon® Scalable 4309Y processor, one 32 GB dual-rank memory, Broadcom MegaRAID MR416i-a x16-lane 4 GB cache NVMe/SAS 12G controller for HPE Gen10 Plus and HPE 96W Smart Storage Li-Ion Battery with 145mm cable, eight mini SAS/SATA/NVMe drive bays, five high performance fans, one HPE 800W Flex Slot Platinum Hot Swap Low Halogen Power Supply and 3/3/3 Warranty</td>
-  
-    </tr>
-</table>
+    </head>
 
-<table>
-<caption>Answer the following questions in the context of the system diagram provided by Gerry(Shen Binjie)</caption>
+    <body>
+        <!-- partial:index.partial.html -->
+        <!DOCTYPE html>
+        <html>
 
-<thead>
-<tr>
-<th><!-- Intentionally Blank --></th>
-        <th>Tom(Jiang Yuyi)</th>
-        <th>Knight(Chen Jiahao)</th>
-<tr>
-</thead>
-<tbody>
-<tr>
-<th>Name this system? </th>
-        <td>database management system</td>
-        <td>database management system</td>
-</tr>
-<tr>
-<th>What are the system objectives?</th>
-        <td>Build a database management system to identify the security of information and store secure data</td>
-        <td>Build a database management system to screen and store secure data</td>
-</tr>
-<tr>
- <th>List 3 essential system features and components?</th>
-        <td>Data classification, data storage, filtering data</td>
-        <td>Data classification, data storage, filtering data</td>
-</tr>
-  <tr>
-        <th>List 3 essential hardware from this system.</th>
-        <td>CPU, Hard Disk, Network Card</td>
-        <td>CPU, Hard Disk, Network Card</td>
-    </tr>
-  <tr>
-        <th>List 3 essential software from this system.</th>
-        <td>Microsoft SQL server，HPE ProLiant DL360 Gen10 Plus server，IIS server</td>
-        <td>Microsoft SQL server，HPE ProLiant DL360 Gen10 Plus server，Apache server</td>
-    </tr>
-         <tr>
-        <th>List 2 external system components.</th>
-        <td>smartphone, computer</td>
-        <td>pad，laptop</td>
-    </tr>
-              <tr>
-        <th>List 2 system benefits</th>
-        <td>Ability to automatically filter secure information</td>
-        <td>Has a large amount of storage</td>
-    </tr>
-              <tr>
-        <th>List 2 project difficulties:</th>
-        <td>Need to build a large database</td>
-        <td>Not possessing a higher technical level</td>
-    </tr>
-</tbody>
-</table>
+
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="Resume.html">Resume</a></li>
+            <li><a href="IT Project.html">IT Project</a></li>
+        </ul>
+
+        <body>
+            <h2>System diagram</h2>
+            <p>The system transmits the data transmitted by the user to the PC to the network server, detects and
+                distinguishes safe and dangerous data through the firewall, then excludes the dangerous data and
+                transmits the safe data to the cloud. </p>
+            <div id="pic">
+                <img src='2.png' class='"writer-img' width="600" height="600" text-align="center">
+            </div>>
+            <h4>Vital</h4>
+            <p>With the accelerated development of social digitization and intelligence, the wide application of new
+                technologies such as AI, 5G, and IoT, as well as a large number of new hardware and applications have
+                brought about rapid growth in data volume, and at the same time, data types have become more and more
+                diverse. Produce, capture and store as much data as possible for full analysis to gain insights.
+                Therefore, the storage and classification of data is very important. The IT project I study is about
+                database storage and data classification, storing safe data and excluding dangerous information.</p>
+            <div id="pic">
+                <img src='1.png' class='"writer-img' width="600" height="600" text-align="center">
+            </div>>
+            <hr>
+
+            </hr>
+            <table border="1">
+                <tr>
+                    <th>Name</th>
+                    <th>Details</th>
+                </tr>
+                <tr>
+                    <td>Microsoft SQL server</td>
+                    <td>MySQL is one of the most popular relational database management systems. In terms of WEB
+                        applications, MySQL is one of the best RDBMS (Relational Database Management System) application
+                        software.</td>
+
+                </tr>
+                <tr>
+                    <td>HPE ProLiant DL360 Gen10 Plus server</td>
+                    <td>HPE ProLiant DL360 Gen10 Plus Server with one Intel® Xeon® Scalable 4309Y processor, one 32 GB
+                        dual-rank memory, Broadcom MegaRAID MR416i-a x16-lane 4 GB cache NVMe/SAS 12G controller for HPE
+                        Gen10 Plus and HPE 96W Smart Storage Li-Ion Battery with 145mm cable, eight mini SAS/SATA/NVMe
+                        drive bays, five high performance fans, one HPE 800W Flex Slot Platinum Hot Swap Low Halogen
+                        Power Supply and 3/3/3 Warranty</td>
+
+                </tr>
+            </table>
+
+            <table>
+                <caption>Answer the following questions in the context of the system diagram provided by Gerry(Shen
+                    Binjie)</caption>
+
+                <thead>
+                    <tr>
+                        <th>
+                            <!-- Intentionally Blank -->
+                        </th>
+                        <th>Tom(Jiang Yuyi)</th>
+                        <th>Knight(Chen Jiahao)</th>
+                    <tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Name this system? </th>
+                        <td>database management system</td>
+                        <td>database management system</td>
+                    </tr>
+                    <tr>
+                        <th>What are the system objectives?</th>
+                        <td>Build a database management system to identify the security of information and store secure
+                            data</td>
+                        <td>Build a database management system to screen and store secure data</td>
+                    </tr>
+                    <tr>
+                        <th>List 3 essential system features and components?</th>
+                        <td>Data classification, data storage, filtering data</td>
+                        <td>Data classification, data storage, filtering data</td>
+                    </tr>
+                    <tr>
+                        <th>List 3 essential hardware from this system.</th>
+                        <td>CPU, Hard Disk, Network Card</td>
+                        <td>CPU, Hard Disk, Network Card</td>
+                    </tr>
+                    <tr>
+                        <th>List 3 essential software from this system.</th>
+                        <td>Microsoft SQL server，HPE ProLiant DL360 Gen10 Plus server，IIS server</td>
+                        <td>Microsoft SQL server，HPE ProLiant DL360 Gen10 Plus server，Apache server</td>
+                    </tr>
+                    <tr>
+                        <th>List 2 external system components.</th>
+                        <td>smartphone, computer</td>
+                        <td>pad，laptop</td>
+                    </tr>
+                    <tr>
+                        <th>List 2 system benefits</th>
+                        <td>Ability to automatically filter secure information</td>
+                        <td>Has a large amount of storage</td>
+                    </tr>
+                    <tr>
+                        <th>List 2 project difficulties:</th>
+                        <td>Need to build a large database</td>
+                        <td>Not possessing a higher technical level</td>
+                    </tr>
+                </tbody>
+            </table>
+        </body>
+
+        </html>
+        <!-- partial -->
+
+    </body>
+
+    </html>
+    <!-- partial -->
+    <!-- footer-->
+    <div class="footer-section">
+        <div class="container">
+            <div class="footer-top">
+                <p>Copyright &copy; 20IT2 Gerry(Shen Binjie).<a target="_blank"></a></p>
+
+            </div>
+        </div>
 </body>
 
-</html>
-<!-- partial -->
-  
-</body>
-</html>
-<!-- partial -->
-  
-</body>
 </html>
