--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 <span class="introduce_item_title">My name is Shen Binjie and my English name is Gerry. I got Advanced Diploma in IT Ningbo city college of vocational technology. I love to collect things, especially stamps, I am optimistic, cheerful, sincere and passionate about others. Serious and responsible, good at communication and coordination. Solid professional knowledge and positive work attitude. Strong analytical and problem-solving skills, good organizational and communication skills, and teamwork spirit.</span>
 
             </div>
+              <!-- footer-->
+    <div class="footer-section">
+        <div class="container">
+            <div class="footer-top">
+                <p>Copyright &copy; 20IT2 Gerry(Shen Binjie).<a target="_blank"></a></p>
+
+            </div>
+        </div>
+        </div>>
 </body>
 <script>
     let mucics = document.getElementById('audio')
