--- a/Resume.html
+++ b/Resume.html
@@ -47,6 +47,15 @@ src='Gerry.jpg' class='"writer-img'width="150" height="150">
  <div class='image'>
 <p class='caption'>Gerry's CV</p>
 </div>
+      <!-- footer-->
+    <div class="footer-section">
+        <div class="container">
+            <div class="footer-top">
+                <p>Copyright &copy; 20IT2 Gerry(Shen Binjie).<a target="_blank"></a></p>
+
+            </div>
+        </div>
+        </div>>
 </body>
 
 </html>
